<resources>
    <string name="app_name">Didino</string>
    <string name="appName">دیدینو</string>
    <string name="vitrine">ویترین</string>
    <string name="category">دسته بندی</string>
    <string name="myMovies">فیلم های من</string>
    <string name="developed_by">Developed By Amir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_connection">اتصال به اینترنت برقرار نیست!</string>
    <string name="offline_gallery">گالری آفلاین</string>
    <string name="search">جستجو</string>
    <string name="gallery">میتوانی برای زمانی که اینترنت نداری،\n\nفیلم هارا دانلود کنی و بعدا ببینی</string>
    <string name="tryagain">تلاش مجدد</string>
    <string name="check_internet">وضعیت اینترنت را بررسی نمایید.</string>
    <string name="search_">جست و جو</string>
    <string name="search_hint">برای جست و جوی فیلم مورد علاقه خود،\n\nنام یا قسمتی از نام آن را وارد کنید.</string>
    <string name="login">ورود</string>
    <string name="Register">ثبت نام</string>
    <string name="settings">تنظیمات حساب کاربری</string>
    <string name="theme_dark">تم تیره</string>
    <string name="about">درباره</string>
    <string name="more_information">اطلاعات بیشتر</string>
    <string name="special">ویژه</string>
    <string name="see_All">مشاهده همه</string>
    <string name="news_Didino">تازه های دیدینو</string>
    <string name="see_Free">تماشای رایگان</string>
    <string name="iranian_series">سریال های ایرانی</string>
    <string name="foreign_series">سریال های خارجی</string>
    <string name="action">اکشن</string>
    <string name="historical_and_Religious">تاریخی و مذهبی</string>
    <string name="romantic">عاشقانه</string>
    <string name="family">خانوادگی</string>
    <string name="Documentary">مستند</string>
    <string name="comedy">کمدی</string>
    <string name="science_Fiction">علمی تخیلی</string>
    <string name="scary">وحشت</string>
    <string name="animation">انیمشین</string>
    <string name="mvoie_story">داستان فیلم</string>
</resources>