<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_ID"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@drawable/slide_bg"
    android:backgroundTint="@color/main_Color2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/BottomNavigationViewTextStyle">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/iransanmobile_bold"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/txt_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_btn"
                android:textSize="12sp"
                android:text="@string/Register" />

            <View
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/view_line" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_btn"
                android:textSize="12sp"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lin"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/view_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/change_Theme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:thumbTint="@color/bottom_selector"
                    android:layout_marginEnd="250dp"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/theme_dark"
                    android:textColor="@color/white2"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/moon" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/view_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/white2"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/about" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>